# evaldriven-recsys

./: README.md  pyproject.toml
src/: create_evaluation_dataframe.ipynb  ignore_file.py  rec_engine_evalpipe_run.py  rec_engine_run.py  retriever_evalpipe_run.py  test_bsfewshot.json
src/models/: rec_engine.py  rel_score_calculator.py
src/models/evaluation_pipelines/: scorers.py  utils.py
src/models/evaluation_pipelines/json_files/: evaluation_dataset.json  ndcg_dataset.json  op1.json  op10.json  op2.json  op3.json  op4.json  op5.json  op6.json  op7.json  op8.json  op9.json  run_ids.txt  test1.json  test10.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
src/models/llm_modules/: ner_model.py  product_evaluation_model.py  utils.py
src/models/prompt_schemas/: ner_prompt.txt  product_evaluation_prompt.txt  pydantic_schemas.py
src/models/retriever/: bi_encoder.py  cross_encoder.py  two_step_retriever.py  utils.py
tests/: tests_main.py
